# patentcity

./: .gitignore  .pre-commit-config.yaml  404.html  CHEATSHEET.md  CITATION.bib  LICENSE.md  Makefile  README.md  data.dvc  index.html  lib.dvc  mkdocs.yml  models.dvc  objects.inv  patentcity.py  patentcity_brew.py  patentcity_geo.py  patentcity_io.py  patentcity_lib.py  patentcity_utils.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
.dvc/: config
.github/: CODEOWNER  CODEOWNERS
API_BREW/: index.html
API_EVAL/: index.html
API_GEO/: index.html
API_IO/: index.html
API_SEARCH/: index.html
ASSETS_AREA/: index.html
ASSETS_BORDER/: index.html
ASSETS_DISTANCE/: index.html
ASSETS_EXPORTS/: index.html
ASSETS_GDPPCCOUNTRY/: index.html
ASSETS_GDPREG/: index.html
ASSETS_GDPSHAREAGRICULTURE/: index.html
ASSETS_GDPSHAREINDUSTRY/: index.html
ASSETS_GDPSHARESERVICE/: index.html
ASSETS_GRAVITY/: index.html
ASSETS_IMMIGRATION/: index.html
ASSETS_IMPORTS/: index.html
ASSETS_LANGUAGE/: index.html
ASSETS_POPULATION/: index.html
ASSETS_SHAPEFILES/: index.html
ASSETS_TRADEFLOW/: index.html
CHEATSHEET/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTION_GUIDELINES/: index.html
DATA/: index.html
DD/: index.html
DD_ANNOTATION_GUIDELINES/: index.html
DD_DATE_IMPUTATION/: index.html
DD_MODEL_CARD/: index.html
DE/: index.html
DE_ANNOTATION_GUIDELINES/: index.html
DE_DATE_IMPUTATION/: index.html
DE_MODEL_CARD/: index.html
FR/: index.html
FR_ANNOTATION_GUIDELINES/: index.html
FR_MODEL_CARD/: index.html
GB/: index.html
GB_ANNOTATION_GUIDELINES/: index.html
GB_MODEL_CARD/: index.html
LICENSE_CODE/: index.html
LICENSE_DATA/: index.html
RECIPE_PATENTCITY/: index.html
RECIPE_WGP/: index.html
RECORD_DATA/: index.html
US/: index.html
US_ANNOTATION_GUIDELINES/: index.html
US_MODEL_CARD/: index.html
XX_CIT_EVALUATION/: index.html
XX_DEDUPLICATION_EVALUATION/: index.html
XX_GEOC_REPORT/: index.html
XX_REL_ANNOTATION_GUIDELINES/: index.html
XX_REL_CARD/: index.html
XX_STATISTICAL_AREAS/: index.html
XX_TRUNC_REPORT/: index.html
assets/: area_de.csv  area_fr.csv  area_gb.csv  area_us.csv  area_xx.csv  border_xx.csv  boundariescz1990_us.shp.tar  boundariesnuts2_de.shp.tar  boundariesnuts2_fr.shp.tar  boundariesnuts2_gb.shp.tar  codecounty_de.json  codecounty_fr.json  codecounty_us.json  codenameharmonisation_xx.json  codestate_us.json  de_harmonizednames.csv  de_nuts.csv  de_statisticalareas.csv  distance_xx.csv  exports.csv  formats.txt  fr_harmonizednames.csv  fr_statisticalareas.csv  gb_statisticalareas.csv  gb_statisticalareasvob.csv  gdppc_xx.csv  gdppccountry_xx.csv  gdpreg_xx.csv  gdpshareagriculture_xx.csv  gdpshareindustry_xx.csv  gdpshareservice_xx.csv  gravity_xx.csv  harmonizednames_gb.csv  harmonizednames_us.csv  immigration_us.csv  immigrationbyorigin_us.csv  imports.csv  language_xx.csv  nuts.csv  population_de.csv  (+13 more)
configs/: config_rel.yaml  config_rel_best_ddpatent01.yaml  config_rel_best_ddpatent02.yaml  config_rel_best_depatent01.yaml  config_rel_best_depatent02.yaml  config_rel_best_gbpatent01.yaml  config_rel_best_uspatent01.yaml  config_rel_best_uspatent04.yaml  config_rel_search.yaml  de_t2vner.cfg  de_t2vner_pretraining.cfg  de_trfner.cfg  en_t2vner.cfg  en_t2vner_pretraining.cfg  en_trfner.cfg  fr_t2vner.cfg  fr_t2vner_pretraining.cfg  fr_trfner.cfg  loc_ddpatentxx.yaml  loc_depatentxx.yaml  loc_gbpatentxx.yaml  loc_uspatentxx.yaml  rel_best_uspatent03.yaml  rel_depatent01.yaml  rel_depatent02.yaml  rel_frpatent01.yaml  rel_frpatent02.yaml  rel_gbpatent01.yaml  rel_uspatent02.yaml  top_xxpatentxx.yaml  xx_textcat_bow.cfg  xx_textcat_cnn.cfg
data/: .gitignore  gold_cit_gbpatent01.csv.dvc  gold_cit_gbpatentocr01.csv.dvc  (+108 more)
(+184 files in other folders)
