[tool.poetry]
name = "patentcity"
version = "0.0.0"
description = "Collect data from early-aged patents."
authors = ["Cyril Verluise <cyril.verluise@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^2.3.2"
typer = "^0.3.0"
pre-commit = "^2.6.0"
bs4 = "^0.0.1"
lxml = "^4.5.2"
pandas = "^1.0.5"
smart_open = "^2.1.0"
spacy-lookups-data = "^0.3.2"
googlemaps = "^4.4.2"
google-cloud = "^0.34.0"
google-cloud-bigquery = "^1.27.2"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
mkdocs-material = "^5.4.0"
mkdocs-minify-plugin = "^0.3.0"
pymdown-extensions = "^7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
